src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Applicant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Applied</fullName>
        </values>
        <values>
            <fullName>Confirmed</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>File Closed</fullName>
        </values>
        <values>
            <fullName>Inquired</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Wait Listed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inquiry</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Applied</fullName>
        </values>
        <values>
            <fullName>Confirmed</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>File Closed</fullName>
        </values>
        <values>
            <fullName>Inquired</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Wait Listed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academic_Program_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academic Program 2</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities (Academic Program 2)</relationshipLabel>
        <relationshipName>OpportunitiesProgram2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Academic_Program_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academic Program 3</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities (Academic Program 3)</relationshipLabel>
        <relationshipName>OpportunitiesProgram3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Academic_Program_Code_2__c</fullName>
        <description>Pulls the Program Code from the Academic Program 2 lookup field so we can use the program code in workflows and other automations.</description>
        <formula>Academic_Program_2__r.Program_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Program Code 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Program_Code_3__c</fullName>
        <description>Pulls the Program Code from the Academic Program 3 lookup field so we can use the program code in workflows and other automations.
Help Text</description>
        <formula>Academic_Program_3__r.Program_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Program Code 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Program_Code__c</fullName>
        <description>Pulls the Program Code from the Academic Program lookup field so we can use the program code in workflows and other automations.</description>
        <formula>Academic_Program__r.Program_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The official plan or program the individual applies for. A lookup to Program with a filter criteria of Record Type = Academic Program.</description>
        <inlineHelpText>The official plan or program the individual applies for.</inlineHelpText>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected value is not a valid Program.</errorMessage>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities (Academic Program)</relationshipLabel>
        <relationshipName>Opportunities_Academic_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Academic_Term_End_Date__c</fullName>
        <description>Used for Conga Reports</description>
        <formula>Academic_Term__r.Term_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Academic_Term_Start_Date__c</fullName>
        <description>Used for Conga reports</description>
        <formula>Academic_Term__r.Term_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Academic_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The academic term a prospect is interested in.</description>
        <inlineHelpText>The academic term a prospect is interested in.</inlineHelpText>
        <label>Academic Term</label>
        <referenceTo>Academic_Term__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActSix_Application_Id__c</fullName>
        <description>Used in loading ActSix Inqs and Apps</description>
        <label>ActSix Application Id</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActSix__c</fullName>
        <description>ActSix Status</description>
        <label>ActSix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Finalist</fullName>
                </value>
                <value>
                    <fullName>Scholar</fullName>
                </value>
                <value>
                    <fullName>Former Applicant</fullName>
                </value>
                <value>
                    <fullName>Former Inquiry</fullName>
                </value>
                <value>
                    <fullName>Former Finalist</fullName>
                </value>
                <value>
                    <fullName>Former Scholar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Block_From_Banner__c</fullName>
        <label>Admission Block From Banner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Block__c</fullName>
        <label>Admission Block</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Integration_Code__c</fullName>
        <description>Banner Data</description>
        <label>Admission Integration Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Type__c</fullName>
        <label>Admission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
                <value>
                    <fullName>Conditional and Provisional</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admissions_Confidence__c</fullName>
        <label>Admissions Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admit_Type__c</fullName>
        <description>The category the potential applicant falls into for recruitment segmentation (Ex: New student, Transfer student, etc.)</description>
        <label>Admit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Freshman</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with. Filtered to exclude the Administrative Account Record Type.</description>
        <inlineHelpText>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with.</inlineHelpText>
        <label>Affiliated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Affiliated Account)</relationshipLabel>
        <relationshipName>Affiliated_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>The external ID used by the application collection tool or database for matching to Applicant Opportunities. Only displays on the Applicant Opportunity page layout.</description>
        <inlineHelpText>The external ID used by the application collection tool or database for matching to Applicant Opportunities.</inlineHelpText>
        <label>Application Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_Date__c</fullName>
        <description>A date stamp (set by the Opportunity: Set Application Submitted Date workflow rule) to record when an Opportunity is converted from an Inquiry to an Applicant record type.</description>
        <inlineHelpText>The date when the Opportunity was converted from an Inquiry to an Applicant record type.</inlineHelpText>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Application associated with this Opportunity</description>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arts_Humanities_Scholarship__c</fullName>
        <description>Used to track the status of Arts and Humanities Scholarship Applications</description>
        <label>Arts/Humanities Scholarship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Scholarship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <description>Loaded from Banner</description>
        <inlineHelpText>Options are from Banner</inlineHelpText>
        <label>Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Banner_Attributes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Banner_Application_Number__c</fullName>
        <description>Field populated from Banner to represent the application id</description>
        <label>Banner Application Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>Returns the Career from the Academic Program if there is one, otherwise it returns the Career from the Recruitment Program if there is one. Used in building the Opportunity Key for the Interaction Processor to determine whether to create a new Opportunity or update an existing Opportunity.</description>
        <formula>/*If an Academic Program exists for the Opportunity, retrieve the associated Career from the Academic Program Account*/ 
IF(NOT(ISBLANK(Academic_Program__c)),TEXT(Academic_Program__r.Career__c), 

/*IF not, retrieve the associated Career from the Recruitment Program Account on the Opportunity*/ 
TEXT(Recruitment_Program__r.Career__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Career</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Grade_Level__c</fullName>
        <description>Grade level for Campaign Monitor Integration</description>
        <formula>IF( 
TEXT(School_College__c) = &apos;Undergraduate&apos;,
    IF(
        RIGHT(Academic_Term__r.Term_Description__c,4) = &quot;2020&quot;,
        &quot;Senior&quot;,
        IF(
            RIGHT(Academic_Term__r.Term_Description__c,4) = &quot;2021&quot;,
            &quot;Junior&quot;,
            IF(
                RIGHT(Academic_Term__r.Term_Description__c,4) = &quot;2022&quot;,
                &quot;Sophomore&quot;,
                &quot;&quot;
            )
        )
    ),
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Grade Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Inquiry_Date_Count__c</fullName>
        <formula>TODAY() - Communication_Inquiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Inquiry Date Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_Inquiry_Date__c</fullName>
        <formula>IF(
    AND(
        RIGHT(Academic_Term__r.Term_Description__c,4) = &quot;2020&quot;,
        DATEVALUE(Date_Inquired__c) &gt; DATE(2019, 07, 31)
    ), 
    DATEVALUE(Date_Inquired__c), 
    IF(
        AND(
            RIGHT(Academic_Term__r.Term_Description__c,4) = &quot;2020&quot;,
            DATEVALUE(Date_Inquired__c) &lt;= DATE(2019, 07, 31)
        ),
        DATE(2019, 07, 31), 
        IF(
            AND(
                RIGHT(Academic_Term__r.Term_Description__c,4) = &quot;2021&quot;,
                DATEVALUE(Date_Inquired__c) &gt; DATE(2019, 07, 31)
            ),
            DATEVALUE(Date_Inquired__c), 
            IF(
                AND(
                    RIGHT(Academic_Term__r.Term_Description__c,4) = &quot;2021&quot;,
                    DATEVALUE(Date_Inquired__c) &lt;= DATE(2019, 07, 31)
                ), 
                DATE(2019, 07, 31), 
                IF(
                    AND(
                        RIGHT(Academic_Term__r.Term_Description__c,4) = &quot;2022&quot;,
                        DATEVALUE(Date_Inquired__c) &gt; DATE(2019, 07, 31)
                    ), 
                    DATEVALUE(Date_Inquired__c), 
                    IF(
                        AND(
                            RIGHT(Academic_Term__r.Term__r.Term_Description__c,4) = &quot;2022&quot;,
                            DATEVALUE(Date_Inquired__c) &lt;= DATE(2019, 07, 31)
                        ), 
                    DATE(2019, 07, 31), 
                    /* final if / default field */
                    DATE(1901, 01, 01)
                    )
                )
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conga_Academic_Deptartment_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Academic Deptartment Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Acceptance_Counselor_Note_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga Acceptance Counselor Note Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Acceptance_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga Acceptance Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Accepted_Financial_Aid_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Accepted Financial Aid Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Applied_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga Applied Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_BUILD_Inquired_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga BUILD Inquired Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_BUILD_Parent_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga BUILD Parent Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Bin_Dept_Major__c</fullName>
        <description>for Conga</description>
        <formula>Academic_Program__r.Academic_Program__r.Bin_Dept_Major__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Bin Dept Major</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Bond_Inquiry_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Bond Inquiry Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_Acceptance_Box_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS Acceptance Box Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_Admitted_Events_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS Admitted Events Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_App_Completed_Postcard_2_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga CAS App Completed Postcard 2 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_App_Started_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS App Started Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_FPFW_Enrolled_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS FP/FW Enrolled Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_FPFW_Housing_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS FP/FW Housing Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_FPFW_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS FP/FW Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_Inquired_Apply_Mailer_2_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS Inquired Apply Mailer 2 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_Inquired_Apply_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS Inquired Apply Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_Inquired_Jr_Parent_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS Inquired Jr Parent Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_Inquired_Junior_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga CAS Inquired Junior Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_Inquired_Sophomore_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga CAS Inquired Sophomore Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_CAS_Inquired_Sr_Parent_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga CAS Inquired Sr Parent Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_DNP_Program_Director_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga DNP Program Director Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_FPFW_Enrolled_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga FP/FW Enrolled Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_FPFW_Financial_Aid_Mailing_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga FP/FW Financial Aid Mailing Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_FPFW_Housing_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga  FP/FW Housing Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_FPFW_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga FP/FW Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_GS_Counseling_PD_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga GS Counseling PD Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_GS_PA_Program_Director_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga GS PA Program Director Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Honors_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Honors Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Inquired_Heavy_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga Inquired Heavy Mailing Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Inquired_Junior_FA_Card_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Inquired Junior FA Card Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Inquired_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga Inquired Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Inquired_Senior_FA_Card_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Inquired Senior FA Card Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Inquired_Sophomore_FA_Card_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Inquired Sophomore FA Card Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Legacy_Notecard_1_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track Marketing mailers</description>
        <label>Conga Legacy Notecard #1 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Legacy_Notecard_2_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for tracking Marketing mailers.</description>
        <label>Conga Legacy Notecard #2 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Legacy_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for tracking Marketing mailings</description>
        <label>Conga Legacy Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Military_Postcard_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for tracking Marketing mailers.</description>
        <label>Conga Military Postcard Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_PSEO_Apply_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga PSEO Apply Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Program_Director_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Program Director Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Program_Text__c</fullName>
        <description>Used for Conga Acceptance Letters. prints string of programs, whether 1, 2, or 3 programs are listed on an Opportunity.</description>
        <formula>Academic_Program__r.Name + 
 IF( Academic_Program_2__c = null, 
&quot; program&quot;, 
  IF( Academic_Program_3__c = null,
    &quot; and &quot; + Academic_Program_2__r.Name + &quot; programs&quot;,
    &quot;, &quot; + Academic_Program_2__r.Name + &quot;, and &quot; + Academic_Program_3__r.Name + &quot; programs&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Program Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Rejection_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Rejection Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_SEM_Applied_Counselors_Note_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga SEM Applied Counselors Note Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Sorted_Bin_Number__c</fullName>
        <description>for Conga</description>
        <formula>Academic_Program__r.Academic_Program__r.Sorted_Bin_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Sorted Bin Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Test_Score_Received_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Test Score Received Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Waitlist_Ended_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga Waitlist Ended Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Waitlist_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga Waitlist Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Welcome_Week_Parent_Mailer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Welcome Week Parent Mailer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Years_Events_Card_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Conga to mark when a letter has been generated for an Opportunity.</description>
        <label>Conga Year&apos;s Events Card Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Banner_ID__c</fullName>
        <description>Used in workflows and automations.</description>
        <formula>Contact__r.Banner_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Banner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Five_Digit_Postal_Code__c</fullName>
        <description>Used in the CAS Assignment Rules</description>
        <formula>Contact__r.Five_Digit_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Five Digit Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mailing_Postal_Code__c</fullName>
        <description>Used with the Geo Map in the CAS Assignment Rules to match a counselor by Postal Code.</description>
        <formula>LEFT( Contact__r.MailingPostalCode,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mailing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mailing_State__c</fullName>
        <description>Needed to pull in the Mailing State to support the Field Mapping used by the CAS Assignment Rules.</description>
        <formula>Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_PIDM__c</fullName>
        <description>Used for workflows and automations, and integrations.</description>
        <formula>Contact__r.PIDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact PIDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_UDCID__c</fullName>
        <formula>Contact__r.UDCID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact UDCID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Connects this Opportunity to a Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Applicant)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counselor_Rank__c</fullName>
        <description>Used for Admissions teams to rank their Opportunities and Applicants.</description>
        <inlineHelpText>Value must be between 1 and 5.</inlineHelpText>
        <label>Counselor Rank</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_GPA_High_School__c</fullName>
        <formula>Contact__r.High_School_GPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative GPA High School</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>